argo-eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-alb
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/group.name: shared-alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:045672142170:certificate/1e67ad1c-8bc3-4a0d-93aa-f171334012b4
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/conditions.argogrpc: |
      [{"field":"http-header","httpHeaderConfig":{"httpHeaderName":"Content-Type","values":["application/grpc"]}}]
spec:
  ingressClassName: alb
  rules:
    - host: argocd.nasirtechtalks.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argogrpc
                port:
                  number: 443
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
